--- a/html/stylesheets/global/global.css
+++ b/html/stylesheets/global/global.css
@@ -31,7 +31,7 @@
 /* Global definitions (begin) */
  
   html, body { width: 100%; height: 100%; }
-  body { font: 12px Arial, sans-serif; color: black; position: relative; }
+  body { font: 12px Arial, sans-serif; color: black; position: relative; background: url(background.png) repeat 0 0; }
   
   .g-color { color: #0971B2; }
  
@@ -55,7 +55,7 @@
 /* Footer at the bottom edge of screen */
  
   .l-page { position: relative; min-height: 100%; }
-  .l-page .l-page { min-height: 0; padding-bottom: 275px; }
-  .l-page-bottom { z-index: 1; clear: both; position: relative; margin-top: -265px; height:255px; }
+  .l-page .l-page { min-height: 0; padding-bottom: 170px; }
+  .l-page-bottom { z-index: 1; clear: both; position: relative; margin-top: -150px; height: 145px; }
  
 /* Footer at the bottom edge of screen (end) */
