--- a/html/stylesheets/global/global.css
+++ b/html/stylesheets/global/global.css
@@ -31,7 +31,7 @@
 /* Global definitions (begin) */
  
   html, body { width: 100%; height: 100%; }
-  body { font: 12px Arial, sans-serif; color: black; position: relative; background: url(background.png) repeat 0 0; }
+  body { font: 12px Georgia, serif; color: black; position: relative; background: url(background.png) repeat 0 0; }
   
   .g-color { color: #0971B2; }
  
