--- a/html/stylesheets/global/b-round.css
+++ b/html/stylesheets/global/b-round.css
@@ -9,6 +9,15 @@
     IEBorderRadius: 10px;
   }  
 
+  .b-round_8-c41528 {
+    background-color: #c41528;
+    border-radius: 8px;
+  
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    IEBorderRadius: 8px;
+  }  
+
   .b-round_2-999999 {
     background-color: #999999;
     border-radius: 2px;
@@ -17,5 +26,7 @@
     -webkit-border-radius: 2px;
     IEBorderRadius: 2px;
   }  
+  
+  
 
 /* Round sets (end) */
