Remove Mootools framework in correct way. Mod_bg_votd installed. Insert votd in home template. Correct votd layout.

--- a/framework/stylesheets/global/global.css
+++ b/framework/stylesheets/global/global.css
@@ -44,6 +44,7 @@
   
   /* Default limits for layout */
 	.g-limit { min-width: 1000px; max-width: 1400px; }
+	.g-limit-min { min-width: 1000px; }
   .g-centered { margin: 0 auto; }
  
   /* Pre-define headers */
